Fix detecting installed entries when using knewstuff

BUG:486400
FIXED-IN:8.2