src/alknewstuffengine.h
@@ -42,6 +42,11 @@ public:
 
     AlkNewStuffEntryList installedEntries() const;
 
+   /**
+     * Reload installed entries
+     */
+    void reload();
+
 Q_SIGNALS:
     void updatesAvailable(const AlkNewStuffEntryList &entries);
 
